# PMTracker

./: .gitignore  .mcp.json  Optimized Prompts.md  PROJECT_PROMPTS.md  README.md  UI.md  USER_STORIES.md  azure-pipelines.yml  backlog-sprint.md  chat.md  claude.md  deployment.md  gunicorn.conf.py  login.md  packages.md  pyproject.toml  requirements.txt  seed_dem.py  server.py  smoke_test.py  startup.sh  status.md  tasks.md
api/: main.py
api/routes/: agents.py  assignments.py  auth.py  chat.py  comments.py  issues.py  projects.py  scope.py  search.py  sprints.py  transitions.py  users.py
docs/: PMTracker-Product-Documentation.md  langchain-mcp-integration-guide.md  mcp-consumer-guide.md
pmtracker/: api_client.py  constants.py  server.py
pmtracker/store/: json_store.py
pmtracker/store/data/: fields.json  link_types.json  projects.json  users.json
pmtracker/tools/: __init__.py  attachments.py  comments.py  fields.py  issues.py  linking.py  projects.py  sprints.py  transitions.py  users.py
scripts/: upload_userstories.py
tests/: test_tools.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: AgentTokenDialog.tsx  ChatPanel.tsx  CreateIssueDialog.tsx  ImportCsvDialog.tsx  IssueCard.tsx  Layout.tsx
ui/src/lib/: api.ts  auth.ts  utils.ts
ui/src/pages/: Backlog.tsx  CreateProject.tsx  Dashboard.tsx  IssueDetail.tsx  Login.tsx  People.tsx  ProjectBoard.tsx  ProjectChat.tsx  ProjectScope.tsx  ProjectSettings.tsx  SprintBoard.tsx
ui/src/test/: api.test.ts  auth.test.ts  utils.test.ts  (+1 more)
