[project]
name = "pmtracker"
version = "0.1.0"
description = "Jira MCP Server Simulator"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
pmtracker = "server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
